--- a/04-justify-content.html
+++ b/04-justify-content.html
@@ -19,10 +19,10 @@
         flex-direction: row;
 
         justify-content: flex-start;
-        justify-content: flex-end;
-        justify-content: center;
-        justify-content: space-between;
-        justify-content: space-around;
+        /*justify-content: flex-end;*/
+        /*justify-content: center;*/
+        /*justify-content: space-between;*/
+        /*justify-content: space-around;*/
       }
 
       .box {
